# ndkdemo

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/wake/wakendkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-wake.cpp
app/src/main/java/com/example/wake/wakendkdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wake/wakendkdemo/: ExampleUnitTest.java
